stratosource/stratosource/sfdiff/testfiles/ltest/unpackaged/objects/Case.object
<CustomObject>
    <fields>
        <fullName>NOTES_FROM_R2_GATHERING_MEETINGS__c</fullName>
        <label>NOTES FROM R2 GATHERING MEETINGS</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>New_Address__c</fullName>
        <label>New Address</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>New_Company_Name__c</fullName>
        <label>New Company Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Seats_Requested__c</fullName>
        <description>How many seats are being requested for this case</description>
        <label>Number of Seats Requested</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Optional__c</fullName>
        <defaultValue>&quot;If you have any additional comments, please enter them in the description field below. Otherwise, click Submit to send your request to Red Hat.&quot;</defaultValue>
        <label>Optional</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Oracle_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Territory Changes have been updated in Oracle</description>
        <label>Oracle Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_Build__c</fullName>
        <description>the owner of the requirement&apos;s build</description>
        <label>Owner - Build</label>
        <picklist>
            <picklistValues>
                <fullName>Jen Romano</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Devon Kapler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>John Herson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kalidass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paresh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prasad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brijesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IDC - Test 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IDC - Test 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rebecca Loudermilk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antara</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gaurav</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunil</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Owner_Design__c</fullName>
        <description>the owner of the requirement&apos;s design</description>
        <label>Owner - Design</label>
        <picklist>
            <picklistValues>
                <fullName>Jen Romano</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rebecca Loudermilk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Devon Kapler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>John Herson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kalidass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paresh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prasad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brijesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IDC - Test 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IDC - Test 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Earllette Frye</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Timmy Boisvert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Will Larter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phel Meyer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angela Daniels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mary Chandra</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Owner_Test__c</fullName>
        <description>the owner of the requirement&apos;s test</description>
        <label>Owner - Test</label>
        <picklist>
            <picklistValues>
                <fullName>Jen Romano</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Devon Kapler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>John Herson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kalidass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paresh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prasad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brijesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IDC - Test 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IDC - Test 2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partnership_Upgrade__c</fullName>
        <defaultValue>&quot;Click the Submit button to request an upgrade to your company&apos;s partnership level. Red Hat will review your request within the next three business days.  If you have any additional comments, please enter them in the Description field below.&quot;</defaultValue>
        <label>Partnership Upgrade</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Pass_to__c</fullName>
        <description>This drop down will assign the requirement to individual teams for follow up.</description>
        <label>Pass to</label>
        <picklist>
            <picklistValues>
                <fullName>Business Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tech Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transformation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QB &amp; SBC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other - IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SKU/Pricebook Cleanup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>App Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Future Business Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Future Release</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Post_as_a_Top_Issue__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if you would like this issue included in a report of the top issues. To be viewed by all users. Momentum Cases with this box checked will be listed in a report. There will be a link on the home page linking to the report. The report will list the top Issues for the past week (or designated timeframe.)</description>
        <label>Post as a Top Issue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Process_Area__c</fullName>
        <label>Process Area</label>
        <picklist>
            <picklistValues>
                <fullName>Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analysis &amp; Qualification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building the Customer Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Close Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Create Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forecasting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manage the Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negotiating and Closing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospecting and Profiling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Reporting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Working the Opportunity</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Process_Issue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Process Issue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Production_Deployment_Date__c</fullName>
        <label>Production Deployment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <description>Out-of-Scope reason</description>
        <label>Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Business Withdrew</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Passed to Transformation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Passed to Application Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Complexity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Further Clarification could not be determined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Departmental Limitation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing Functionality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Business Follow-up</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RedHatLoginName__c</fullName>
        <description>The redhat.com login name is set by the onboarding process when a &quot;Migration Request&quot;, &quot;User Activation Request&quot;, or &quot;User Creation Request&quot; case is created.  This value is used to match a redhat.com username to an existing &quot;Partner Onboarding&quot; case.</description>
        <inlineHelpText>The redhat.com login name set by the onboarding process.</inlineHelpText>
        <label>Red Hat Login Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LATAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GLOBAL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Related_to_SFA_Release__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this field if this case is a carryover item from any of the SFA releases.</description>
        <label>Related to SFA Release (R1-R4)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Release_Impacted__c</fullName>
        <label>Release Impacted</label>
        <picklist>
            <picklistValues>
                <fullName>R1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M2L</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Release_Notes_Location__c</fullName>
        <label>Release Notes Location</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Requester__c</fullName>
        <description>The name of the person or region that requested the requirement or enhancement.</description>
        <label>Requester</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_for_Release__c</fullName>
        <label>Required for Release #</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of Scope - SA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LD - Point Release</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requirement_Traceability_Comments__c</fullName>
        <label>Requirement Traceability Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Requirement_Traceability_Status__c</fullName>
        <description>Tracks if requirement is Met, Partially Met, or Not Met.</description>
        <inlineHelpText>Tracks if requirement is Met, Partially Met, or Not Met:
Met = Requirement has been optimally satisfied by design
Partially Met = Requirement has been satisfied, but not optimally by design
Not Met = Requirement has not been satisfied by design</inlineHelpText>
        <label>Requirement Traceability Status</label>
        <picklist>
            <picklistValues>
                <fullName>Met</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partially Met</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Met</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requires_Follow_Up__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requires Follow Up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Resolution_Description__c</fullName>
        <label>Resolution Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Routing_Sheet_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Territory Changes have been updated in the Territory Routing Spreadsheet</description>
        <label>Routing Sheet Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rx_High_Level_Requirements__c</fullName>
        <label>Rx - High Level Requirements</label>
        <picklist>
            <picklistValues>
                <fullName>R2 - NUTCASE Enhancements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R2 - Localized Forms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R2 - QB HW Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R2 - Supportable X Interim Pain Relief</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R2 - Dashboard Visibility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R2 - Improved Contract Visibility at Account Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R2 - Account Profile Updates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R2 - Pre-Sales Process for SA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R2 - Dashboards and Reports Cleanup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R2 - SFDC, SBC and QB enhancements to improve efficiency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R2 - Additional OM Process Improvements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R2 - Strategic Account Classification and Hierarchy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R2 - LATAM: Local Requirements Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R2 - US/APAC: Channel Load Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R2 - Finance: Addl. Order Submit Validation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R2 - Finance: Booking and Commission Team Claims</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R2 - Business Affairs: Access, Visibility, and Update Capability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R4 - Lead Distribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R4 - Non-Salesforce.com items (QB and SBC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R4 - Remaining H/M reqs from R1/R2 (~60 SFDC pain point reqs of 80)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R4 - High Post R2 Go-Live Feature reqs (SFDC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R4 - High Priority Items from Reqs Gathering Sessions (SFDC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R4 - APAC Channel Load</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R4 - SKU for Metamatrix (owned by Ops)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R4 - New SFDC functionality available in Dec.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R4 - EMEA Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R4 - Complete Process Visibility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R4 - EMEA Channel Load</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R4 - Forecasting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R4 - Localization</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sign_Off_Date__c</fullName>
        <label>Sign-Off Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>Back Office Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End User Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Momentum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R1 Out of Scope</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requirements Gathering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training Enhancement Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TTT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAT</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Specializations__c</fullName>
        <label>Specializations</label>
        <picklist>
            <picklistValues>
                <fullName>Specialization D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JBoss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RHEL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Virtualization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middleware</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Status_Build__c</fullName>
        <description>The status of the build process</description>
        <label>Status - Build</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting on Someone Else</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In QA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_Design__c</fullName>
        <description>The status of the design process</description>
        <label>Status - Design</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting on Someone Else</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_Test__c</fullName>
        <description>The status of the testing processes</description>
        <label>Status - Test</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting on Someone Else</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Steering_Committee_Status__c</fullName>
        <label>Steering Committee Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Presented to Steering Committee</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Needs Esclation to Steering Committee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved by Steering Committee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied by Steering Committee</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Module__c</fullName>
        <label>Sub-Module</label>
        <picklist>
            <picklistValues>
                <fullName>Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alerts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commissions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contracts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Docs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forecast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hierarchy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Localization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nutcase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prioritize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Profiles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quotes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SBC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Triage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Validation</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submit_to_RFC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Use this field when a case should be sent to Dave Meder for a RFC.</description>
        <label>Submit to CAB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>System_Issue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>System Issue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Target_Deployment_Date__c</fullName>
        <label>Target Deployment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Targeted_Close_Date__c</fullName>
        <label>Targeted Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Technical_Requirement__c</fullName>
        <description>If the business requirement requires specific technical requirements for design and build, the technical requirement will be linked through this field.</description>
        <label>Technical Requirement</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Test_Script_Location__c</fullName>
        <label>Test Script Location</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Touch_Level__c</fullName>
        <description>The level of interaction needed with the biz to design/build the requirement</description>
        <inlineHelpText>The level of interaction needed with the biz to design/build the requirement</inlineHelpText>
        <label>Touch Level</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Training_Module__c</fullName>
        <description>This field will be updated with the training module created per release.</description>
        <label>Training Module</label>
        <type>TextArea</type>
    </fields>
</CustomObject>